--- a/blog.html
+++ b/blog.html
@@ -8,15 +8,6 @@
   <link rel="shortcut icon" href="./images/icons/title.png" type="image/x-icon"/>
   <link rel="stylesheet" href="mystyles.css">
 <style>
-.reaction-buttons {
-  margin-top: 10px;
-}
-.reaction-buttons button {
-  margin-right: 10px;
-  padding: 6px 12px;
-  font-size: 14px;
-  cursor: pointer;
-}
 .share-button {
   margin-top: 10px;
 }
@@ -51,46 +42,8 @@
         });
       });
     });
-	//Like Dislike button
-	 document.addEventListener("DOMContentLoaded", function () {
-    // Load counts from localStorage on page load
-    document.querySelectorAll('.blog-post').forEach(post => {
-      const postId = post.dataset.postId;
-      const likeSpan = post.querySelector('.like-count');
-      const dislikeSpan = post.querySelector('.dislike-count');
-
-      const savedData = JSON.parse(localStorage.getItem(postId)) || { likes: 0, dislikes: 0 };
-      likeSpan.textContent = savedData.likes;
-      dislikeSpan.textContent = savedData.dislikes;
-    });
-  });
-
-  function likePost(button) {
-    const post = button.closest('.blog-post');
-    const postId = post.dataset.postId;
-    const likeSpan = button.querySelector('.like-count');
-    const dislikeSpan = post.querySelector('.dislike-count');
-
-    let likes = parseInt(likeSpan.textContent) + 1;
-    likeSpan.textContent = likes;
-
-    const dislikes = parseInt(dislikeSpan.textContent);
-    localStorage.setItem(postId, JSON.stringify({ likes, dislikes }));
-  }
-
-  function dislikePost(button) {
-    const post = button.closest('.blog-post');
-    const postId = post.dataset.postId;
-    const dislikeSpan = button.querySelector('.dislike-count');
-    const likeSpan = post.querySelector('.like-count');
-
-    let dislikes = parseInt(dislikeSpan.textContent) + 1;
-    dislikeSpan.textContent = dislikes;
-
-    const likes = parseInt(likeSpan.textContent);
-    localStorage.setItem(postId, JSON.stringify({ likes, dislikes }));
-  }
-  //whats share
+	
+  //whats app
   function shareOnWhatsApp(anchor) {
     const post = anchor.closest('.blog-post');
     const title = post.querySelector('h3').innerText.trim();
@@ -122,7 +75,7 @@
 	<b>ড: সুশোভন জানা,
 	সহযোগী অধ্যাপক,
 	কম্পিউটার বিজ্ঞান এবং প্রকৌশল বিভাগ,
-	ইনস্টিটিউট অফ ইঞ্জিনিয়ারিং & ম্যানেজমেন্ট, কোলকাতা<br>তারিখ: ২৫ জুন 20২৫</i></b></p>
+	ইনস্টিটিউট অফ ইঞ্জিনিয়ারিং & ম্যানেজমেন্ট, কলকাতা<br>তারিখ: ২৫ জুন ২০২৫</i></b></p>
      <p>আর্টিফিসিয়াল ইন্টেলিজেন্স যাকে বাংলায় বললে কৃত্রিম বুদ্ধিমত্তা। আমরা একটা জিনিস সকলেই একমত হবো যাহা ন্যাচারাল বা প্রাকৃতিক তাহাই সত্য বা মানুষের জন্য ভালো বা সমজের জন্য ভালো। দশবছর আগে পর্যন্ত আমাদের মত তৃতীয় বিশ্বের দেশে কৃত্রিম বুদ্ধিমত্তা এতটা প্রভাব বিস্তার করেনি। সরাসরিভাবে বিগত দশবছর গবেষণা ও শিক্ষকতার সাথে যুক্ত থেকে অনুভব করলাম এই কৃত্রিম বুদ্ধিমত্তা সমাজের সকল শ্রেনীর মানুষকে গ্রাস করছে। বিশেষ করে আজ ২০২৫ সালে মানুষ ঘুম থেকে ওঠার অ্যালার্ম বেল থেকে শুরু করে রাতে ঘুমাতে যাওয়ার আগের করনীয় সবই কেউ যেন অগোচরে পুঙ্খানুপুঙ্খ অনুধাবন করছে ও স্মরণ করিয়ে দিচ্ছে। এটাকেই বলা হয় ইন্টারনেট অফ থিংস । আর এই অনুধাবন করাটাই অনেক ক্ষেত্রে ভালো প্রমাণিত হয়েছে। অনেকরকম রোগের চিকিৎসা থেকে শুরু করে রোগের আগাম অনুমান, আবহাওয়া আগাম অনুমান, অর্থনৈতিক অনুমান, কারখানায় উৎপাদন থেকে চাহিদার অনুমান, কৃষিকাজের বিভিন্ন অত্যাধুনিক প্রযুক্তি এই সমস্তই কৃত্রিম বুদ্ধিমত্তা ও ইন্টারনেট অফ থিংস এর সুফল। 
 		<br><br>
 		তাহলে সমস্যাটা কোথায়? সমস্যার শুরুটা হল যখন জেনারেটিভ কৃত্রিম বুদ্ধিমত্তা মানুষের নিত্যদিনের অভ্যাস হয়ে দাঁড়ালো। অফিসের গতানুগতিক কাজে বা সামগ্রিক তথ্য অনুসন্ধান পর্যন্ত ঠিক আছে। যতক্ষণ আপনি জানেন যে সঠিক জিনিসটা কি তখন আপনার বিচারক্ষমতার উপর নির্ভর করে আপনি জেনারেটিভ কৃত্রিম বুদ্ধিমত্তা দ্বারা প্রস্তুত জিনিসকে গ্রহণ বা বর্জন করবেন যেটা আপনার নির্ণয়। কিন্তু আজকের ছাত্রসমাজ যখন তাদের শেখার সময়, জানার সময়, তারা জেনারেটিভ কৃত্রিম বুদ্ধিমত্তা ব্যবহার করে তাদের তাৎক্ষণিক প্রয়োজন মেটাচ্ছে, যেমন - এ্যাসাইনমেন্ট করা, পরীক্ষার আগের প্রস্তুতি ইত্যাদি। 
@@ -130,10 +83,6 @@
 		কিন্তু এর ফলে তারা কখনই বই বা বিশ্বস্ত সংস্থান থেকে তথ্য নিচ্ছেনা। তাদের মধ্যে জ্ঞান কে প্রয়োগ করার বা বিশ্লেষণ করার ক্ষমতা কমে যাচ্ছে। আর প্রস্তুত করার তো প্রয়োজনই শেষ হয়ে যাচ্ছে। কিন্তু এখনো সময় আছে সময় আছে অন্তত যতটুকু জ্ঞান কোনো বিষয়ে থাকলে সেই বিষয়ের উপর জেনারেটিভ কৃত্রিম বুদ্ধিমত্তা ব্যবহার করা যাবে তার মাপকাঠির খুবই প্রয়োজন। আমরা যেটাকে বলি নূন্যতম পূর্ব জ্ঞান। তা না হলে খুব নিকটতম ভবিষ্যতে আমরা সবাই আমাদের মস্তিষ্কের প্রাকৃতিক চিন্তাভাবনা, প্রয়োগ, পর্যালোচনা ও উৎকর্ষতা হারাবো।
 		<br><br>
      </p>
-	<div class="reaction-buttons">
-	<button onclick="likePost(this)">👍 Like (<span class="like-count">0</span>)</button>
-	<button onclick="dislikePost(this)">👎 Dislike (<span class="dislike-count">0</span>)</button>	
-	</div>
 	<div class="share-button">
     <a href="#" class="whatsapp-share" onclick="shareOnWhatsApp(this)" target="_blank">
       📤 Share via WhatsApp
