--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
   <section id="talk">
     <h2>Talk</h2>
     <ul class="custom-ul">
+	<li>Delivered talk as a Resourse Person in the workshop on “NetSafe Ninjas: A Cyber Security Workshop for Young Minds” at Rotary Club of Calcutta, July 30, 2025.</li>
 	<li>Delivered Keynote on “Future of Industry 4.0: Converging AI, Machine Learning, and IoT” in 17th International Conference on Industrial Engineering and Management (ICIEM 2025), April 29, 2025.</li>
 	<li>Presented Paper in 2nd International Conference on Recent Advances in Artificial Intelligence & Smart Applications (RAAISA), Dec 14-15, 2024.</li>
 	<li>Delivered a lecture on “Concepts and Components of IoT” in One Day Hands-on Workshop on AI & IoT at Rotary Club of Calcutta, Dec 13, 2024.</li>
