--- a/index.html
+++ b/index.html
@@ -159,19 +159,21 @@
 
 	<h3>Articles in Conferences Proceedings</h3>
     <ol class="bracketed-list">  
-	<li>D. Chatterjee, <b>S. Jana</b>, “Resume Analyzer: An AI-Powered Approach to Job Matching and ATS Optimization,” <i>Artificial Intelligence and Sustainable Computing (AISC 2025)</i>, July 24-July26, 2025. [Accepted]</li>
+	<li>S. Kundu, S. Adhikary, N. Roy, S. Chakraborty, and <b>S. Jana</b>, “DLP14k: A Benchmark Dataset for Green Fruit Detection in Natural Camouflaging Environments,” <i>2025 IEEE International Conference on Systems, Man, and Cybernetics (SMC)</i>. (Rank B) (Accepted)</li>
 
-	<li>S. Datta, S. Banerjee, and <b>S. Jana</b>, “Disease Classification of Star Fruit (Averrhoa carambola L.) using Deep Learning,” <i>International Conference on Computing, Intelligence, and Application (CIACON)</i>, IEEE, 2025. [Accepted]</li>
-	
-	<li>S. P. Dutta, <b>S. Jana</b>, and P. K. Sinha, “IoT-Based Water Quality Monitoring with Floating Smart Device: A Paradigm Shift in Water Standard Surveillance,” <i>2024 2nd International Conference on Signal Processing, Communication, Power and Embedded System (SCOPES)</i>, pp. 1-6, Dec, 2024.<a href="https://doi.org/10.1109/SCOPES64467.2024.10991016" target="_blank">[Link]</a></li>
+	<li>D. Chatterjee, and <b>S. Jana</b>, “Resume Analyzer: An AI-Powered Approach to Job Matching and ATS Optimization,” <i>Artificial Intelligence and Sustainable Computing (AISC 2025)</i>, July 24–26, 2025. (Accepted)</li>
 
-	<li>S. Datta, S. Banerjee, and <b>S. Jana</b>, “Disease Classification of Star Fruit (Averrhoa carambola L.) using Deep Learning,” <i>2nd International Conference on Recent Advances in Artificial Intelligence & Smart Applications (RAAISA) 2024</i>, Dec 14-15, 2024. [Accepted & Presented]</li>
+	<li>S. Adhikary, N. Roy, and <b>S. Jana</b>, “Enhancing CCTV-Based Traffic Violation Detection Using AI for Automated Enforcement,” <i>International Conference on Computing, Intelligence, and Application (CIACON)</i>, IEEE, 2025. (Accepted)</li>
 
-	<li>N. Roy, S. Chakraborty, and <b>S. Jana</b>, “Smart Lock for Enhancing Luggage Security Using Internet of Things,” <i>IEEE International Conference on Communication, Computing and Signal Processing IICCCS, </i> September 19-20, 2024. <a href="https://doi.org/10.1109/IICCCS61609.2024.10763867" target="_blank">[Link]</a></li>
+	<li>S. P. Dutta, <b>S. Jana</b>, and P. K. Sinha, “IoT-Based Water Quality Monitoring with Floating Smart Device: A Paradigm Shift in Water Standard Surveillance,” <i>2024 2nd International Conference on Signal Processing, Communication, Power and Embedded System (SCOPES)</i>, Dec 2024. <a href="https://doi.org/10.1109/SCOPES64467.2024.10991016" target="_blank">[Link]</a></li>
 
-	<li>M. Paul, J. Mukherjee, S. Chakraborty, and <b>S. Jana</b>, “A Comparative Study on Face Mask Detection using Machine Learning and Deep Learning Approaches,” <i>2nd International Conference on Data Analytics and Insights,</i> July, 2024. [Accepted & Presented].</li>
+	<li>S. Datta, S. Banerjee, and <b>S. Jana</b>, “Disease Classification of Star Fruit (Averrhoa carambola L.) using Deep Learning,” <i>2nd International Conference on Recent Advances in Artificial Intelligence & Smart Applications (RAAISA)</i>, Dec 14–15, 2024. (Accepted & Presented)</li>
 
-	<li>D. Guchait, A. Kundu, and <b>S. Jana</b>, “A Novel Framework for Women's Safety Using Computer Vision & Machine Learning,” <i>2nd International Conference on Data Analytics and Insights,</i> July, 2024. [Accepted & Presented].</li>
+	<li>N. Roy, S. Chakraborty, and <b>S. Jana</b>, “Smart Lock for Enhancing Luggage Security Using Internet of Things,” <i>IEEE International Conference on Communication, Computing and Signal Processing (IICCCS)</i>, Sept 19–20, 2024. <a href="https://doi.org/10.1109/IICCCS61609.2024.10763867" target="_blank">[Link]</a></li>
+
+	<li>M. Paul, J. Mukherjee, S. Chakraborty, and <b>S. Jana</b>, “A Comparative Study on Face Mask Detection using Machine Learning and Deep Learning Approaches,” <i>2nd International Conference on Data Analytics and Insights</i>, pp. 445–454, Springer, 2024. <a href="https://doi.org/10.1007/978-981-96-3287-9_35" target="_blank">[Link]</a></li>
+
+	<li>D. Guchait, A. Kundu, and <b>S. Jana</b>, “A Novel Framework for Women's Safety Using Computer Vision & Machine Learning,” <i>2nd International Conference on Data Analytics and Insights</i>, Springer, 2024. <a href="https://doi.org/10.1007/978-981-96-3287-9_13" target="_blank">[Link]</a></li>
 
 	<li>S. Chakrabarty, <b>S. Jana</b>, and P. Baral, “A Data-Driven Approach for the Prediction of Team Potential and Result During Cricket Match,” <i>2nd World Conference on Communication & Computing</i>, pp. 1-5, IEEE, 2024. <a href="https://doi.org/10.1109/WCONF61366.2024.10691967" target="_blank">[Link]</a></li>
 
