--- a/gallery.html
+++ b/gallery.html
@@ -42,10 +42,10 @@
       <h2>Photographs</h2>
 	<h3><i>Delivered talk as a Resource Person in the workshop on “NetSafe Ninjas: A Cyber Security Workshop for Young Minds” at Rotary Club of Calcutta, July 30, 2025.</i></h3>
     <div class="gallery-grid">
-      <img src="images\photographs\Workshop_Cybersecurity_2025\P1.png" alt="Photographs">
-      <img src="images\photographs\Workshop_Cybersecurity_2025\P2.png" alt="Photographs">
-	<img src="images\photographs\Workshop_Cybersecurity_2025\P3.png" alt="Photographs">
-	    <img src="images\photographs\Workshop_Cybersecurity_2025\P4.png" alt="Photographs">
+      <img src="images\photographs\Workshop_Cybersecurity_2025\P1.jpg" alt="Photographs">
+      <img src="images\photographs\Workshop_Cybersecurity_2025\P2.jpg" alt="Photographs">
+	<img src="images\photographs\Workshop_Cybersecurity_2025\P3.jpg" alt="Photographs">
+	    <img src="images\photographs\Workshop_Cybersecurity_2025\P4.jpg" alt="Photographs">
     </div>
       <!-- Add more photos here -->
 	<h3><i>Delivered Keynote Speech on “Future of Industry 4.0: Converging AI, Machine Learning, and IoT” at 17th International Conference on Industrial Engineering and Management (ICIEM 2025- Online), April 29, 2025.</i></h3>
