--- a/itworkshop-matlab.html
+++ b/itworkshop-matlab.html
@@ -94,9 +94,15 @@
 	<ul class="custom-ul">
 	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EeGaJT9fAK9OiKF--XgX7_EBC4wyayRTVcVzPk7JYE7PJQ?e=EaNQbf" target="_blank">1. Introduction to MATLAB</a></li>
 	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EakkH_FWHtdEkULDKFnh7x0B1Juiv41pJ-y7pGbVejsFqA?e=lUiiwj" target="_blank">2. Data Types, Variables, Operators & Basic Commands</a></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EQ0_jCkvEwJCi41CfjBPnxIBxQi8Aoc-QiL8M34WNlxQ-w?e=XHnJli" target="_blank">3. MATLAB_Vector, Matrix, Array, and Cell</a><span class="blinking-new">🔴New</span></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EVKr_ggtwMJIs9XnDtiTYX8BDcSCSybCHfNJZVbANHdbaA?e=ro02zJ" target="_blank">4_MATLAB_Script, Function & Debugging</a><span class="blinking-new">🔴New</span></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EXU7Q-GymK1IoJNR6khgQTIBDk3jMkiMp2rM27jYYU4EgQ?e=heGMyX" target="_blank">5_MATLAB_Programming Constructs</a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EQ0_jCkvEwJCi41CfjBPnxIBxQi8Aoc-QiL8M34WNlxQ-w?e=XHnJli" target="_blank">3. MATLAB_Vector, Matrix, Array, and Cell</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EVKr_ggtwMJIs9XnDtiTYX8BDcSCSybCHfNJZVbANHdbaA?e=ro02zJ" target="_blank">4_MATLAB_Script, Function & Debugging</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EXU7Q-GymK1IoJNR6khgQTIBDk3jMkiMp2rM27jYYU4EgQ?e=heGMyX" target="_blank">5_MATLAB_Programming Constructs</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EZqlTDFuvN9DiscHUQzHpPsBojUFF9DGbzJneP8Ldo-FcA?e=dzgY2X" target="_blank">6_Applications: Table, Data Import & Export, Polynomial Evaluation</a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/Ef4OrdYH7yNDh3BmMGHYsAIB6t33mTC9gVqxrvsYol_YXw?e=jnGy41" target="_blank">7_Data Visualization using MATLAB®: 2D Plots</a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EQqHWmUVbPZPvGmMdek-7mcBfJ4trtyBJzy4bQ8MsV-xfA?e=AbeO15" target="_blank">8_Data Visualization using MATLAB®: 3D Plots</a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EWlzidHsnV5MhomeDKySDAgB6VGwn0ucTRbfcql1hR0UEw?e=WOlJfb" target="_blank">9_MATLAB® GUI/Apps Development</a><span class="blinking-new">🔴New</span></li>
+		
+	
 	</ul>
   </section>
 
@@ -145,3 +151,4 @@
 
 </body>
 </html>
+
