--- a/itworkshop-matlab.html
+++ b/itworkshop-matlab.html
@@ -59,8 +59,9 @@
   <section id="announcement">
     <h2>Announcement</h2>
     <ul class="custom-ul">
-       <li><a href="https://iemcollege-my.sharepoint.com/:x:/g/personal/susovan_jana_iem_edu_in/ETGwf2jU-HVJgYtQIOvxwR0BYGz4SvPuNE5vUg0FqYIGnw?e=UVzcvb" target="_blank">Lab Assignment Evaluation Tracker </a><span class="blinking-new">🔴New</span></li>
-	  <li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EX9kvMg52y5PmWkhPKpdsRcBqZbntgJfxXd4T56yl0zWVg?e=6uTE51" target="_blank">General Notice for LAB </a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EfgZbd4rfQZEtmzlezONrFMBxh_UotbC32lhG8OQc-UVhQ?e=Zp7XvV" target="_blank">Notice for Individual Project on MATLAB </a><span class="blinking-new">🔴New</span></li>
+      <li><a href="https://iemcollege-my.sharepoint.com/:x:/g/personal/susovan_jana_iem_edu_in/ETGwf2jU-HVJgYtQIOvxwR0BYGz4SvPuNE5vUg0FqYIGnw?e=UVzcvb" target="_blank">Lab Assignment Evaluation Tracker </a></li>
+	  <li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EX9kvMg52y5PmWkhPKpdsRcBqZbntgJfxXd4T56yl0zWVg?e=6uTE51" target="_blank">General Notice for LAB </a></li>
 	  <li>📢 First class will be held on <b>July 7, 2025 at 10:00 AM</b> in LG TBD.</li>
       <li>📝 Lab Assignments must be submitted <b>SAME DAY</b> as the date of assignment.</li>
 	  <li>📄 Detailed <b><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EUHSe7eBiINAli0oSQakvUsBnPpTeDOaSLxy1Z0Xsxn_wg?e=3iXDGa" target="_blank">Lesson Plan for Theory</a></b> is now available.</li>
@@ -151,4 +152,5 @@
 
 </body>
 </html>
+
 
